--- a/src/LanyardProfile.css
+++ b/src/LanyardProfile.css
@@ -133,6 +133,26 @@
 /* about me*/
 
 /* misc */
+ul,
+li {
+    padding: 0%;
+    margin: 0;
+    list-style: none;
+}
+.connections {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    gap: 10px;
+    margin-top: 5px;
+
+}
+.connection-icon {
+    height: 28px;
+    width: auto;
+}
+
+
 .hidden {
     display: none;
 }
