--- a/src/LanyardProfile/LanyardProfile.css
+++ b/src/LanyardProfile/LanyardProfile.css
@@ -12,7 +12,16 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
-
+.wrapper::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.85); /* Adjust the alpha value to control the darkness */
+}
 .card {
   background: rgba(0, 0, 0, 0.6);
   box-shadow: 0 8px 32px 0 rgba(23, 7, 30, 0.369);
@@ -46,7 +55,7 @@ li {
 }
 
 a {
-  color: #d11800;
+  color: #d7bcff;
 }
 /* misc */
 
@@ -59,3 +68,32 @@ a {
   /* container */
 }
 /* media queries */
+
+
+/* Style for the tooltip container */
+
+
+
+/* Style for the tooltip content */
+[data-tooltip]::after {
+  content: attr(data-tooltip);
+  position: fixed;
+  background-color: #000000;
+  color: #d7bcff;
+  padding: 6px 10px;
+  border-radius: 4px;
+  font-size: 14px;
+  white-space: nowrap;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease, visibility 0.3s ease, transform 0.3s ease;
+  transform: translate(-50%, 10px);
+}
+
+/* Show the tooltip on hover */
+[data-tooltip]:hover::after {
+  opacity: 1;
+  visibility: visible;  
+  transform: translate(-10%, 100%);
+}
+
