--- a/src/index.css
+++ b/src/index.css
@@ -13,5 +13,6 @@ body {
   font-size: 16px;
   line-height: 1.5;
   color: #fff;
-  overflow: hidden !important;
+  background: url(./assets/background.gif);
+
 }
