--- a/src/LanyardProfile/LanyardProfile.css
+++ b/src/LanyardProfile/LanyardProfile.css
@@ -5,7 +5,9 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  min-height: 100vh;
+  height: 100vh;
+  overflow: auto;
+  flex-grow: 50px;
   gap: 10px;
   background: url(../assets/background.gif);
   background-position: center;
@@ -20,6 +22,8 @@
   right: 0;
   bottom: 0;
   left: 0;
+  height: 100vh;
+  overflow: auto;
   background-color: rgba(0, 0, 0, 0.85); /* Adjust the alpha value to control the darkness */
 }
 .card {
