--- a/src/LanyardProfile/LanyardProfile.css
+++ b/src/LanyardProfile/LanyardProfile.css
@@ -12,7 +12,6 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  flex-flow: wrap;
 }
 .wrapper::before {
   content: '';
@@ -23,6 +22,7 @@
   bottom: 0;
   left: 0;
   height: 100vh;
+  overflow: auto;
   background-color: rgba(0, 0, 0, 0.85); /* Adjust the alpha value to control the darkness */
 }
 .card {
@@ -67,6 +67,13 @@ a {
   /* container */
   .card {
     width: 80%;
+  }
+  /* container */
+}
+@media (max-height: 1768px) {
+  /* container */
+  .wrapper  {
+    justify-content: center !important;
   }
   /* container */
 }
